TMS570: BSP variant for internal RAM
Signed-off-by: Premysl Houdek <kom541000@gmail.com>

--- a/c/src/lib/libbsp/arm/tms570/Makefile.am
+++ b/c/src/lib/libbsp/arm/tms570/Makefile.am
@@ -55,6 +55,7 @@ project_lib_DATA += startup/linkcmds
 EXTRA_DIST =
 EXTRA_DIST += startup/linkcmds.tms570ls3137_hdk
 EXTRA_DIST += startup/linkcmds.tms570ls3137_hdk_sdram
+EXTRA_DIST += startup/linkcmds.tms570ls3137_hdk_intram
 
 
 # ----------------------------
